# video_finder

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
app/: main.py
app/core/: config.py  web.py
app/db/: database.py  schema.sql
app/models/: history_models.py  job_models.py  metadata_models.py  search_models.py
app/routers/: history_routes.py  jobs_routes.py  search_routes.py  view_context.py
app/services/: groq_rate_limit_service.py  history_import_service.py  job_runner_service.py  metadata_service.py  search_service.py  transcription_executor_service.py  transcription_service.py
app/static/: styles.css
app/templates/: _search_form.html  base.html  index.html  progress.html  results.html
app/workers/: transcription_worker.py
tests/: test_config.py  test_groq_rate_limit_service.py  test_history_import_service.py  test_job_runner_service.py  test_metadata_service.py  test_routes_integration.py  test_search_service.py  test_transcription_executor_service.py  test_transcription_service.py  test_v2_routes_integration.py
tests/fixtures/: watch_history.json
